# QtFirebase

./: .gitignore  CMakeLists.txt  File.swift  Helper.swift  README.md  qtfirebase.pri  qtfirebase.pro  qtfirebase_version.pri
.github/workflows/: ci.yml
example/Messaging/: .qmlls.ini  CMakeLists.txt  main.cpp  main.qml
example/Messaging/android/: AndroidManifest.xml  build.gradle  google-services.json  gradle.properties  settings.gradle
example/Messaging/android/assets/: android_rcc_bundle.rcc
example/Messaging/android/res/values/: libs.xml  strings.xml
example/Messaging/android/src/ro/wesell/QtMessagingDemo/: Application.java  MyFirebaseMessagingService.java  MyListenerService.java  MyWorker.java
example/Messaging/ios/: GoogleService-Info.plist
src/: .qmlls.ini  CMakeLists.txt  ModImportHelper.cmake  platformutils.cpp  platformutils.h  qtfirebase.cpp  qtfirebase.h  qtfirebase_register.h  qtfirebasemessaging.cpp  qtfirebasemessaging.h
src/ios/: appdelegate.mm  platformutils.mm
src/qtfirebaseadmob/: qtfirebaseadmob.h  qtfirebaseadmobrequest.h
